--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>NIKHIL SINGH | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -119,9 +119,9 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <!-- Add your photo: <img src="images/your-photo.jpg" class="profile-img"> -->
+            <!--: <img src="images/your-photo.jpg" class="profile-img"> -->
             <div style="background: white; width: 150px; height: 150px; border-radius: 50%; margin: 0 auto 20px;"></div>
-            <h1>Your Name</h1>
+            <h1>NIKHIL SINGH</h1>
             <p class="tagline">Web Developer | Designer | Creator</p>
         </div>
     </header>
@@ -171,7 +171,7 @@
             <div style="text-align: center; max-width: 600px; margin: 0 auto;">
                 <p>Interested in working together? Feel free to reach out!</p>
                 <br>
-                <a href="mailto:youremail@example.com" style="display: inline-block; background: #667eea; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold;">Contact Me</a>
+                <a href="mailto:indianikhil07@gmail.com" style="display: inline-block; background: #667eea; color: white; padding: 15px 30px; text-decoration: none; border-radius: 5px; font-weight: bold;">Contact Me</a>
             </div>
         </div>
     </section>
@@ -184,8 +184,9 @@
                 <a href="#"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-            <p style="margin-top: 20px;">© 2024 Your Name. Hosted on GitHub Pages.</p>
+            <p style="margin-top: 20px;">© 2025 NIKHIL SINGH. Hosted on GitHub Pages.</p>
         </div>
     </footer>
 </body>
+
 </html>
