--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <!--: <img src="images/your-photo.jpg" class="profile-img"> -->
+            <!--![nikhil](https://github.com/user-attachments/assets/164389f3-5774-4070-8079-bc0c75899940: <img src="images/your-photo.jpg" class="profile-img"> -->
             <div style="background: white; width: 150px; height: 150px; border-radius: 50%; margin: 0 auto 20px;"></div>
             <h1>NIKHIL SINGH</h1>
             <p class="tagline">Web Developer | Designer | Creator</p>
@@ -190,3 +190,4 @@
 </body>
 
 </html>
+
