--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
                 display: block;
                 margin: 15px 0;
             }
+            
+            .social-links {
+                gap: 15px;
+            }
         }
     </style>
 </head>
@@ -383,6 +387,18 @@
                         <i class="fab fa-github"></i>
                         <strong>GitHub:</strong> github.com/indianikhil07
                     </div>
+                    <div class="contact-item">
+                        <i class="fab fa-linkedin"></i>
+                        <strong>LinkedIn:</strong> linkedin.com/in/nikhil-singh-852378394
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-instagram"></i>
+                        <strong>Instagram:</strong> @nikhil_singh_0704
+                    </div>
+                    <div class="contact-item">
+                        <i class="fab fa-twitter"></i>
+                        <strong>Twitter:</strong> @NikhilSing36475
+                    </div>
                 </div>
             </div>
         </div>
@@ -395,17 +411,17 @@
                 <a href="https://github.com/indianikhil07" title="GitHub Profile">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="#" title="LinkedIn Profile">
+                <a href="https://www.linkedin.com/in/nikhil-singh-852378394" title="LinkedIn Profile">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="#" title="Twitter Profile">
+                <a href="https://www.instagram.com/nikhil_singh_0704?igsh=MXgxaWw3czU4MHRrcw==" title="Instagram Profile">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://x.com/NikhilSing36475" title="Twitter Profile">
                     <i class="fab fa-twitter"></i>
                 </a>
                 <a href="mailto:indianikhil07@gmail.com" title="Send Email">
                     <i class="fas fa-envelope"></i>
-                </a>
-                <a href="#" title="Instagram Profile">
-                    <i class="fab fa-instagram"></i>
                 </a>
             </div>
             
